Foms design is completed

--- a/src/app/components/content-category/content-category.component.html
+++ b/src/app/components/content-category/content-category.component.html
@@ -1,84 +1,188 @@
 <div
-class="h-[35rem] bg-hero-pattern1 bg-no-repeat bg-cover bg-right -scale-x-100 relative flex justify-end"
->
-<div
-  class="w-1/2 h-full bg-gradient-to-r from-green-800 to-transparent -scale-x-100"
+  class="h-[35rem] bg-hero-pattern1 bg-no-repeat bg-cover bg-right -scale-x-100 relative flex justify-end"
 >
   <div
-    class="text-white font-sans absolute top-40 left-36 flex flex-col gap-3"
+    class="w-1/2 h-full bg-gradient-to-r from-green-800 to-transparent -scale-x-100"
   >
-    <p class="font-bold text-4xl">Job Details</p>
-    <p class="w-[46rem]">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde numquam
-      provident magni, fugiat dignissimos sapiente molestiae impedit ipsum
-      eius recusandae ullam nobis labore esse autem laboriosam nesciunt
-      aliquid corporis odit!
-    </p>
-    <p class="text-2xl text-orange-700 mt-5">LoadMore --------></p>
+    <div
+      class="text-white font-sans absolute top-40 left-36 flex flex-col gap-3"
+    >
+      <p class="font-bold text-4xl">Job Details</p>
+      <p class="w-[46rem]">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde numquam
+        provident magni, fugiat dignissimos sapiente molestiae impedit ipsum
+        eius recusandae ullam nobis labore esse autem laboriosam nesciunt
+        aliquid corporis odit!
+      </p>
+      <p class="text-2xl text-orange-700 mt-5">LoadMore --------></p>
+    </div>
   </div>
 </div>
-</div>
+
+<div class="px-10 text-gray-700">
+  <img src="https://www.edubex.com/assets/images/logo_main.svg" class="py-5" />
+  <div class="pb-10">
+    <h1 class="text-4xl text-gray-600">Specilist, Content and Communication</h1>
+    <p class="text-gray-700">Edubex,Thiruvananthapuram,Kerala,India</p>
+  </div>
+
+  <div class="flex">
+    <div class="h-fit flex-[2] p-10">
+      <h2 class="text-2xl font-medium text-gray-700 mb-2">
+        Specilist, Content and communication
+      </h2>
+      <p class="mb-2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+        provident corporis nisi alias autem, Lorem ipsum dolor sit, amet
+        consectetur adipisicing elit. Voluptas odio maxime eveniet eos accusamus
+        assumenda rerum pariatur libero, quisquam voluptates fuga aliquam ullam
+        et exercitationem dolores eligendi aliquid. Quia, ullam?
+      </p>
+
+      <h2 class="text-2xl font-medium text-gray-700 mb-2">Responsibilities</h2>
+
+      <ul
+        class="list-square px-6 py-2"
+        *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      >
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+          quidem quia voluptatem at officiis labore, exercitationem ipsam enim
+          molestiae dolorum, reprehenderit eaque culpa consectetur neque illo
+          suscipit cumque incidunt optio.
+        </li>
+      </ul>
+
+      <h2 class="mb-4 mt-4">The successfull candidate will have</h2>
+
+      <ul
+        class="list-square px-6 py-1"
+        *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      >
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+          quidem quia voluptatem at officiis labore.
+        </li>
+      </ul>
+
+      <h2 class="mb-4 mt-4">Benefits and Perks</h2>
+
+      <ul class="list-square px-6 py-1" *ngFor="let item of [1, 2, 3, 4, 5, 6]">
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+      </ul>
+
+      <h2 class="mb-4 mt-4">About Edubex</h2>
+      <p class="mb-4 mt-4">
+        Edubex is the fastest growing online education platform specialized in
+        delivering Shorts term courses, Webinars, Online events and University
+        pathway programs for student and working professionals across the
+        wrold.Our programs stand out with its meticulously designed course
+        structure, content and easy to follow presentions.
+      </p>
+      <p class="mb-4 mt-4">
+        Bonus: Have you been to a compus or jooined and online learning
+        opportunity ? We are actively seeking individulas that believe in
+        lifelong learning and that have taken part inour on Campus or Online
+        offerings.
+      </p>
+      <p class="mb-4 mt-4">
+        NOTE: Only those applicants under consideration willbe contacted. Please
+        accept our utmost appreciation for your interst.
+      </p>
+      <p class="mt-4">
+        Edubex is committed to maintaing a diverse work environment and is proud
+        to be an equal oportunity employer. All Qualifed applicants, regardless
+        of racee, color, religon, gender gender identity or expressionn, sexual
+        orientation, national origin, genetics,disability, age, or veteran
+        status will receive consideration for employment. If you have any
+        accessibility requirements or concerns regarding the hiring process or
+        employment with us, please notify us so we can provide suitable
+        accommodation.
+      </p>
+    </div>
+    <div class="w-full flex-[1] border-l px-10">
 
 
-<div class="px-10">
-<img src="https://www.edubex.com/assets/images/logo_main.svg" class="py-5">
-<div class="pb-10">
-  <h1 class="text-4xl text-gray-600">Specilist, Content and Communication</h1>
-  <p class="text-gray-700">Edubex,Thiruvananthapuram,Kerala,India</p>
-</div>
+      <button class="w-fit h-fit px-12 py-2 bg-green-700 text-white rounded ml-[26rem] mt-10">Apply</button>
+      <p>Seniority Level</p>
+      <p>Associate</p>
+      <p class="mt-4">Industry</p>
+      <p>information Technology & Service Computer <br> Software Financial Services</p>
+      <p class="mt-4">Employment Type</p>
+      <p>Full-time</p>
+      <p class="mt-4 text-xl">Job Functions</p>
+      <p>Quality Assurance</p>
 
+    </div>
 
-<div class="flex">
+  </div>
+  <div class="flex py-10">
 
-  <div class="h-fit bg-slate-100 flex-[2] border-l p-10">
+ <img src="./../../../assets/International trade-rafiki.png" class="h-[50rem]">
 
+ <div class="border border-red-400 p-10 rounded-lg h-fit">
 
-    <h2 class="text-2xl font-medium text-gray-700 mb-2">Specilist, Content and communication</h2>
-    <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident corporis nisi alias autem, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas odio maxime eveniet eos accusamus assumenda rerum pariatur libero, quisquam voluptates fuga aliquam ullam et exercitationem dolores eligendi aliquid. Quia, ullam?</p>
+  <div class="flex justify-between border-b py-5">
+       <div class="flex flex-col gap-1">
+        <h1 class="text-3xl">Apply for the job</h1>
+        <p class="text-orange-600">Please sign in to apply with linked in</p>
+        <button class="w-fit h-fit px-6 py-3 bg-gray-800 text-white mt-2">Sign in with LinkedIn</button>
+       </div>
+       <p>*Required</p>
+  </div>
 
+  <form>
+    <div class="flex gap-5 mt-5 border-b py-5">
+  <div class="flex flex-col gap-2">
+   <label for="name">First Name <span class="text-red-600">*</span></label>
+   <input type="text" class="border w-96 h-12">
 
-    <h2 class="text-2xl font-medium text-gray-700 mb-2">Responsibilities</h2>
+   <label for="email">Email<span class="text-red-600">*</span></label>
+   <input type="email" class="border w-96 h-12">
 
-    <ul class="list-square px-6 py-2" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10,11]" >
+   <label for="location">Location(City)</label>
+   <input type="text" class="border w-96 h-12">
 
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quidem quia voluptatem at officiis labore, exercitationem ipsam enim molestiae dolorum, reprehenderit eaque culpa consectetur neque illo suscipit cumque incidunt optio.</li>
-    </ul>
-
-    <h2 class="mb-4 mt-4">The successfull candidate will have</h2>
-
-    <ul class="list-square px-6 py-1" *ngFor="let item of [1,2,3,4,5,6,7,8,9]" >
-
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quidem quia voluptatem at officiis labore.</li>
-    </ul>
-
-    <h2 class="mb-4 mt-4">Benefits and Perks</h2>
-
-    <ul class="list-square px-6 py-1" *ngFor="let item of [1,2,3,4,5,6,]" >
-
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ul>
-
-    <h2 class="mb-4 mt-4">About Edubex</h2>
-    <p class="mb-4 mt-4">Edubex is the fastest growing online education platform specialized in delivering Shorts term courses, Webinars, Online events and University pathway programs for student and working professionals across the wrold.Our programs stand out with its meticulously designed course structure, content and easy to follow presentions.</p>
-    <p class="mb-4 mt-4">Bonus: Have you been to a compus or jooined and online learning opportunity ? We are actively seeking individulas that believe in lifelong learning and that have taken part inour on Campus or Online offerings.</p>
-    <p class="mb-4 mt-4">NOTE: Only those applicants under consideration willbe contacted. Please accept our utmost appreciation for your interst.</p>
-    <p class="mt-4">Edubex is committed to maintaing a diverse work environment and is proud to be an equal oportunity employer. All Qualifed applicants, regardless of racee, color, religon, gender gender identity or expressionn, sexual orientation, national origin, genetics,disability, age, or veteran status will receive consideration for employment. If you have any accessibility requirements or concerns regarding the hiring process or employment with us, please notify us so we can provide suitable accommodation.</p>
-
+   <label for="linked">Linkedin Profile</label>
+   <input type="text" class="border w-96 h-12">
 
   </div>
 
-  <div class="h-fit bg-blue-100 flex-[1]">
+  <div class="flex flex-col gap-2">
+
+    <label for="name">Last Name <span class="text-red-600">*</span></label>
+    <input type="text" class="border w-96 h-12">
 
 
+    <label for="name">Phone<span class="text-red-600">*</span></label>
+    <input type="text" class="border w-96 h-12">
 
+    <label for="name">Resume<span class="text-red-600">*</span></label>
+    <input type="file" class="border w-96 h-12" placeholder="Attach your resume">
 
-
+    <label for="website">Website</label>
+    <input type="text" class="border w-96 h-12">
+   </div>
   </div>
+  <button class="w-fit h-fit px-6 py-3 text-white bg-green-800 ml-[35rem] mt-10">Submit Application</button>
+  </form>
 
-
-
+ </div>
+  </div>
 </div>
 
 
+<div class="flex flex-col gap-2 fixed bottom-10 right-2">
+  <button class="w-10 h-10 bg-white border border-red-200 rounded flex justify-center items-center">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-green-700">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z" />
+    </svg>
 
+  </button>
+
+  <button class="w-10 h-10 bg-white border border-red-200 rounded flex justify-center items-center" routerLink="/content">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
+    </svg>
+  </button>
 </div>
