--- a/src/app/components/content-category/content-category.component.html
+++ b/src/app/components/content-category/content-category.component.html
@@ -131,56 +131,131 @@
        <p>*Required</p>
   </div>
 
-  <form>
+  <form [formGroup]="postForm">
     <div class="flex gap-5 mt-5 border-b py-5">
   <div class="flex flex-col gap-2">
    <label for="name">First Name <span class="text-red-600">*</span></label>
-   <input type="text" class="border w-96 h-12">
+   <input type="text" class="border w-96 h-12" formControlName="firstname" required>
+
+   <div *ngIf="fc.firstname.errors">
+    <div
+      class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+      role="alert"
+      *ngIf="fc.firstname.touched && fc.firstname.invalid"
+    >
+      <strong class="font-bold">First name is required </strong>
+    </div>
+  </div>
 
    <label for="email">Email<span class="text-red-600">*</span></label>
-   <input type="email" class="border w-96 h-12">
+   <input type="email" class="border w-96 h-12" formControlName="email" required>
+
+   <div *ngIf="fc.email.errors">
+    <div
+      class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+      role="alert"
+      *ngIf="fc.email.touched && fc.email.invalid"
+    >
+      <strong class="font-bold">Email is required </strong>
+    </div>
+  </div>
 
    <label for="location">Location(City)</label>
-   <input type="text" class="border w-96 h-12">
+   <input type="text" class="border w-96 h-12" formControlName="location" required>
+
+   <div *ngIf="fc.location.errors">
+    <div
+      class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+      role="alert"
+      *ngIf="fc.location.touched && fc.location.invalid"
+    >
+      <strong class="font-bold">location is required </strong>
+    </div>
+  </div>
 
    <label for="linked">Linkedin Profile</label>
-   <input type="text" class="border w-96 h-12">
+   <input type="text" class="border w-96 h-12" formControlName="linkedin" required>
+
+   <div *ngIf="fc.linkedin.errors">
+    <div
+      class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+      role="alert"
+      *ngIf="fc.linkedin.touched && fc.linkedin.invalid"
+    >
+      <strong class="font-bold">linkedin is required </strong>
+    </div>
+  </div>
 
   </div>
 
   <div class="flex flex-col gap-2">
 
-    <label for="name">Last Name <span class="text-red-600">*</span></label>
-    <input type="text" class="border w-96 h-12">
+    <label for="lastname">Last Name <span class="text-red-600">*</span></label>
+    <input type="text" class="border w-96 h-12" formControlName="lastname" required>
+    <div *ngIf="fc.lastname.errors">
+      <div
+        class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+        role="alert"
+        *ngIf="fc.lastname.touched && fc.lastname.invalid"
+      >
+        <strong class="font-bold">last name is required </strong>
+      </div>
+    </div>
 
 
     <label for="name">Phone<span class="text-red-600">*</span></label>
-    <input type="text" class="border w-96 h-12">
+    <input type="text" class="border w-96 h-12" formControlName="phone" required>
+    <div *ngIf="fc.phone.errors">
+      <div
+        class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+        role="alert"
+        *ngIf="fc.phone.touched && fc.phone.invalid"
+      >
+        <strong class="font-bold">phone is required </strong>
+      </div>
+    </div>
 
     <label for="name">Resume<span class="text-red-600">*</span></label>
-    <input type="file" class="border w-96 h-12" placeholder="Attach your resume">
+    <input type="file" class="border w-96 h-12" placeholder="Attach your resume" formControlName="resume" required>
+    <div *ngIf="fc.resume.errors">
+      <div
+        class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+        role="alert"
+        *ngIf="fc.resume.touched && fc.resume.invalid"
+      >
+        <strong class="font-bold">resueme is required </strong>
+      </div>
+    </div>
 
     <label for="website">Website</label>
-    <input type="text" class="border w-96 h-12">
+    <input type="text" class="border w-96 h-12" formControlName="website" required>
+    <div *ngIf="fc.website.errors">
+      <div
+        class="bg-red-100 border border-red-400 text-red-500 px-4 py-3 rounded relative w-full mt-4"
+        role="alert"
+        *ngIf="fc.website.touched && fc.website.invalid"
+      >
+        <strong class="font-bold">website is required </strong>
+      </div>
+    </div>
    </div>
   </div>
-  <button class="w-fit h-fit px-6 py-3 text-white bg-green-800 ml-[35rem] mt-10">Submit Application</button>
+  <button class="w-fit h-fit px-6 py-3 text-white bg-green-800 ml-[35rem] mt-10" [disabled]="postForm.invalid" [ngClass]="{'bg-slate-500':postForm.invalid}">Submit Application</button>
   </form>
-
  </div>
   </div>
 </div>
 
 
 <div class="flex flex-col gap-2 fixed bottom-10 right-2">
-  <button class="w-10 h-10 bg-white border border-red-200 rounded flex justify-center items-center">
+  <button class="w-10 h-10 bg-white border border-red-200 rounded flex justify-center items-center shadow-md">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-green-700">
       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z" />
     </svg>
 
   </button>
 
-  <button class="w-10 h-10 bg-white border border-red-200 rounded flex justify-center items-center" routerLink="/content">
+  <button class="w-10 h-10 bg-white border border-red-200 rounded flex justify-center items-center shadow-md" routerLink="/home">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
     </svg>
