--- a/src/app/components/main-component/main-component.component.html
+++ b/src/app/components/main-component/main-component.component.html
@@ -102,7 +102,7 @@
         <h1 class="text-4xl text-gray-600 mt-16">Career Opportunities</h1>
         <span class="w-14 border-2 border-orange-600 mt-2 mb-6"></span>
            <ul class="flex gap-8">
-            <li class="hover:border-b-2 hover:border-green-600 hover:text-green-600 cursor-pointer px-6" *ngFor="let item of contries">{{item}}</li>
+            <li class="hover:border-b-2 hover:border-green-600 hover:text-green-600 cursor-pointer px-6" *ngFor="let item of countries">{{item}}</li>
            </ul>
       </div>
 
@@ -117,13 +117,13 @@
         <h1 class="w-full text-2xl px-10 mt-3 mb-3">Education (Full-Time)</h1>
         <div class="flex justify-between px-10 py-4">
           <div class="flex flex-col gap-3">
-             <ul *ngFor="let item of education">
-              <li>{{item}}</li>
+             <ul *ngFor="let item of allData">
+              <li>{{item.title}}</li>
              </ul>
           </div>
           <div class="flex flex-col gap-3">
-            <ul *ngFor="let item of Econtries">
-              <li>{{item}}</li>
+            <ul *ngFor="let item of allData">
+              <li>{{item.location}}</li>
              </ul>
           </div>
         </div>
