--- a/src/app/components/main-component/main-component.component.html
+++ b/src/app/components/main-component/main-component.component.html
@@ -148,11 +148,11 @@
   class="relative h-[35rem]"
 >
 
-<!-- <img [src]="banner.image" class="absolute inset-0 h-full w-full object-cover"> -->
-<img class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+<img [src]="banner.image" class="absolute inset-0 h-full w-full object-cover">
+<!-- <img class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"> -->
 
   <div
-    class="relative w-1/2 h-full bg-gradient-to-r from-green-800 to-transparent"
+    class="hidden relative w-1/2 h-full bg-gradient-to-r from-green-800 to-transparent"
   >
     <div
       class="text-white font-sans absolute top-36 left-36 flex flex-col gap-3"
@@ -227,9 +227,6 @@
     </div>
   </div>
   </div>
-
-
-
 
 
 <div class="flex flex-col gap-2 fixed bottom-10 right-5">
