--- a/src/app/components/main-component/main-component.component.html
+++ b/src/app/components/main-component/main-component.component.html
@@ -116,37 +116,32 @@
     <div
       class="w-full px-24 py-10 bg-white border flex flex-col gap-2 shadow rounded-md"
     >
-      <div class="w-full flex justify-between py-4 border-b items-end mb-6">
-        <div class="flex flex-col gap-2">
-          <p class="text-3xl text-gray-700">Marketing</p>
-          <p class="text-gray-700">Specilialist Content and Communications</p>
-        </div>
-        <p>New Youk</p>
-      </div>
 
-      <h1 class="w-full text-2xl mt-3 mb-3">Education (Full-Time)</h1>
 
-      <div *ngFor="let career of careers$ | async; index as i">
-        <div *ngIf="i === 0">
-          <div class="h-max w-full flex justify-between items-center">
-            <div class="w-max h-full">
-              <p>{{ career.title }}</p>
-              <!-- <p>{{career.category_name}}</p> -->
-            </div>
-            <div class="w-max h-full">
+      <ng-container *ngFor="let career of careers$ | async; index as i">
+
+        <a [routerLink]="[career.id]" *ngIf="i === 0" class="w-full flex flex-col gap-2 py-4">
+          <p class="text-3xl text-gray-700">{{ career.category_name }}</p>
+            <div class="flex justify-between">
+              <p class="text-gray-700">{{ career.title }}</p>
               <p>{{ career.location }}</p>
             </div>
-          </div>
-        </div>
 
-        <div
+            <hr>
+
+            <!-- <h1 class="w-full text-2xl mt-3 mb-3">Education (Full-Time)</h1> -->
+
+          </a>
+        <a
+        [routerLink]="[career.id]"
           class="h-max w-full flex justify-between items-center"
           *ngIf="i !== 0"
         >
           <p>{{ career.title }}</p>
           <p>{{ career.location }}</p>
-        </div>
-      </div>
+        </a>
+      </ng-container>
+
     </div>
   </div>
 </div>
