--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[#34495e] text-white flex justify-between px-10 py-10 relative">
+<div class="bg-[#34495e] text-white flex justify-between px-10 py-10 relative max-md:hidden">
 <div class="flex gap-14">
 
   <div class="flex flex-col gap-2">
@@ -69,4 +69,22 @@
     </div>
 
     </div>
+</div>
+<div class="md:hidden bg-[#34495e] p-4 text-white">
+  <div class="flex flex-col gap-2 justify-evenly">
+    <img src="https://www.edubex.com/assets/images/logo_white.svg" class="w-24">
+
+       <div class="flex gap-2">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+       </div>
+       <p>Sign up to receive exclusive updates on courses and events</p>
+       <div class="w-fit h-fit bg-white p-1 flex">
+       <input type="text" class="h-10 pl-2" placeholder="email">
+       <button class="w-fit h-fit px-4 py-2 bg-green-700">Sign Up</button>
+      </div>
+
+      </div>
 </div>
